spacing fix

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ a:hover {
 }
 
 input {
-	padding: 10px;
+	margin: 10px;
 	color: dimgrey;
 	margin-bottom: 10px;
 	background-color: mistyrose;
